--- a/mymain.css
+++ b/mymain.css
@@ -1,5 +1,4 @@
-/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ *
-/
+/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */
 
 /*
  * What follows is the result of much research on cross-browser styling.
@@ -75,11 +74,6 @@ fieldset {
     padding: 0;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-}
-
 /*
  * Allow only vertical resizing of textareas.
  */
@@ -102,8 +96,7 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-h1{
+.banner{
     background-color: #001f3f;
     text-align: center;
     margin: 0 auto;
@@ -112,12 +105,6 @@ h1{
     font-style: bold;
     color:orange;
 
-}
-
-h1 img{
-    height: 30px;
-    width: 30px;
-    opacity: 50%;
 }
 
 h4{
@@ -137,12 +124,6 @@ h3{
 
 }
 
-.tableone{
-    border: solid;
-    border-style: 
-}
-
-
 .topnav {
     overflow: hidden;
     background-color: #001f3f;
@@ -150,7 +131,6 @@ h3{
 
 /* Style the links inside the navigation bar */
 .topnav a {
-
     float: center;
     display: inline-block;
     color: orange;
@@ -162,14 +142,7 @@ h3{
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #001f3f;
     color: black;
-}
-
-/* Style the "active" element to highlight the current page */
-.topnav a.active {
-    background-color: #001f3f;
-    color: orange;
 }
 
 /* Style the search box inside the navigation bar */
@@ -197,8 +170,97 @@ h3{
     }
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
 
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
 
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+ 
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+  
 /* ==========================================================================
    Helper classes
    ========================================================================== */
