--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
-/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */
-
+/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ *
+/
 /*
  * What follows is the result of much research on cross-browser styling.
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
@@ -74,6 +74,11 @@ fieldset {
     padding: 0;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+}
+
 /*
  * Allow only vertical resizing of textareas.
  */
@@ -96,7 +101,8 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-.banner{
+
+h1{
     background-color: #001f3f;
     text-align: center;
     margin: 0 auto;
@@ -105,6 +111,12 @@ textarea {
     font-style: bold;
     color:orange;
 
+}
+
+h1 img{
+    height: 30px;
+    width: 30px;
+    opacity: 50%;
 }
 
 h4{
@@ -124,6 +136,12 @@ h3{
 
 }
 
+.tableone{
+    border: solid;
+    border-style: 
+}
+
+
 .topnav {
     overflow: hidden;
     background-color: #001f3f;
@@ -131,6 +149,7 @@ h3{
 
 /* Style the links inside the navigation bar */
 .topnav a {
+
     float: center;
     display: inline-block;
     color: orange;
@@ -142,7 +161,14 @@ h3{
 
 /* Change the color of links on hover */
 .topnav a:hover {
+    background-color: #001f3f;
     color: black;
+}
+
+/* Style the "active" element to highlight the current page */
+.topnav a.active {
+    background-color: #001f3f;
+    color: orange;
 }
 
 /* Style the search box inside the navigation bar */
@@ -168,11 +194,6 @@ h3{
     .topnav input[type=text] {
         border: 1px solid #ccc;
     }
-}
-
-body {
-    margin: 0;
-    padding: 0;
 }
 
 * {box-sizing: border-box}
@@ -212,7 +233,17 @@ img {vertical-align: middle;}
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
- 
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
 
 /* Number text (1/3 etc) */
 .numbertext {
@@ -261,6 +292,9 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
   
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
