--- a/main.css
+++ b/main.css
@@ -102,8 +102,8 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-body {
-  margin:0
+body{
+    margin: 0;
 }
 
 h1{
@@ -111,19 +111,24 @@ h1{
     text-align: center;
     margin: 0 auto;
     padding: 0;
-    font-size: 30px;
+    font-size: 1.875rem;
     font-style: bold;
-    color:orange;
+    color: white;
 
 }
 
-.footer {
+h1 img{
+    height: 1.875rem;
+    width: 1.875rem;
+    opacity: 50%;
+}
+
+h4{
     background-color: #a4ef99;
     text-align: center;
     margin: 0;
     padding: 0;
     font-style: italic;
-    width: 100%;
  
 }
 
@@ -132,10 +137,7 @@ h3{
     text-align: center;
     margin: 0;
     padding: 0;
-}
 
-h4 {
-  margin: 0;
 }
 
 .tableone{
@@ -144,64 +146,105 @@ h4 {
 }
 
 
-.topnav {
-    overflow: hidden;
-    background-color: #001f3f;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+/* Navbar container */
+.navbar {
+  overflow: hidden;
+  background-color: #001f3f;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
-
-    float: center;
-    display: inline-block;
-    color: orange;
-    text-align: center;
-    padding: 15px 22px;
-    text-decoration: none;
-    font-size: 17px;
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  font-size: 1rem;
+  color: white;
+  text-align: center;
+  padding: 0.875rem 1rem;
+  text-decoration: none;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #001f3f;
-    color: white;
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-/* Style the "active" element to highlight the current page */
-.topnav a.active {
-    background-color: #001f3f;
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 1rem; 
+  border: none;
+  outline: none;
+  color: white;
+  padding: 0.875rem 1rem;
+  background-color: inherit;
+  font: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
 }
 
-/* Style the search box inside the navigation bar */
-.topnav input[type=text] {
-    float: right;
-    padding: 6px;
-    border: none;
-    margin-top: 8px;
-    margin-right: 16px;
-    font-size: 17px;
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
 }
 
-/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-@media screen and (max-width: 600px) {
-    .topnav a, .topnav input[type=text] {
-        float: none;
-        display: block;
-        text-align: left;
-        width: 100%;
-        margin: 0;
-        padding: 14px;
-    }
-    .topnav input[type=text] {
-        border: 1px solid #ccc;
-    }
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  width: 100%;
+  left: 0;
+  box-shadow: 0rem 0.5rem 1rem 0rem rgba(0,0,0,0.2);
+  z-index: 1;
 }
+
+/* Mega Menu header, if needed */
+.dropdown-content .header {
+  background: red;
+  padding: 0.5rem;
+  color: white;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 20%;
+  padding: 0.625rem;
+  background-color: white;
+  height: 10.75rem;
+}
+
+/* Style links inside the columns */
+.column a {
+  float: none;
+  color: black;
+  padding: 1rem;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a background color on hover */
+.column a:hover {
+  background-color: #ddd;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 
 .content {
   background-color: orange;
-  height: 43rem;
+  height: 88vh;
 }
 
 .featured {
