--- a/main.css
+++ b/main.css
@@ -102,69 +102,67 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
 
-h1{
-    background-color: #001f3f;
+.content {
+  background-color: #DEDEDE;
+  height: 85.5vh;
+}
+/*#3C9794*/
+
+.banner{
+    background-color: #062f4f;
     text-align: center;
-    margin: 0 auto;
-    padding: 0;
-    font-size: 1.875rem;
+    margin: auto;
+    font-size: 30px;
     font-style: bold;
-    color: white;
+    font-family: "lobster";
+    color: #DEDEDE;
 
 }
 
-h1 img{
-    height: 1.875rem;
-    width: 1.875rem;
-    opacity: 50%;
+.topnav {
+    overflow: hidden;
+    background-color: #062f4f;
 }
 
-h4{
-    background-color: #a4ef99;
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: inline-block;
+    color: #DEDEDE;
+    background-color: #062f4f;
     text-align: center;
-    margin: 0;
-    padding: 0;
-    font-style: italic;
- 
+    padding: 15px 22px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
-h3{
-     background-color: #a4ef99;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #D9D9D9;
 }
 
-.tableone{
-    border: solid;
-    border-style: 
+/* Style the "active" element to highlight the current page */
+.topnav a.active {
+    background-color: #062f4f;
 }
 
-
-/* Navbar container */
-.navbar {
-  overflow: hidden;
-  background-color: #001f3f;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
+.topnav a.active:hover {
+  background-color: #D9D9D9;
 }
 
-/* Links inside the navbar */
-.navbar a {
-  float: left;
-  font-size: 1rem;
-  color: white;
-  text-align: center;
-  padding: 0.875rem 1rem;
-  text-decoration: none;
+/* Style the search box inside the navigation bar */
+.topnav input[type=text] {
+    float: right;
+    padding: 0.2rem;
+    margin-top: 0.66rem;
+    margin-right: 1.33rem;
+    font-size: 1rem;
 }
 
-/* The dropdown container */
 .dropdown {
   float: left;
   overflow: hidden;
@@ -175,17 +173,16 @@ h3{
   font-size: 1rem; 
   border: none;
   outline: none;
-  color: white;
+  color: #DEDEDE;
   padding: 0.875rem 1rem;
   background-color: inherit;
   font: inherit; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
 }
 
-/* Add a red background color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
+.dropdown .dropbtn:hover {
+  background-color: #D9D9D9;
+  }
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
@@ -223,6 +220,7 @@ h3{
 .column a {
   float: none;
   color: black;
+  background-color: #062f4f;
   padding: 1rem;
   text-decoration: none;
   display: block;
@@ -231,7 +229,7 @@ h3{
 
 /* Add a background color on hover */
 .column a:hover {
-  background-color: #ddd;
+  background-color: ;
 }
 
 /* Clear floats after the columns */
@@ -241,32 +239,48 @@ h3{
   clear: both;
 }
 
-
-.content {
-  background-color: orange;
-  height: 88vh;
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+    .topnav a, .topnav input[type=text] {
+        float: none;
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+    .topnav input[type=text] {
+        border: 1px solid #ccc;
+    }
 }
 
 .featured {
-  width: 70%;
-  height: 100%;
+  width: 60%;
+  background-color: #062f4f;
+  height: 90%;
   padding: 1rem;
+  margin: 2rem;
   float: left;
-  border-right: 2px solid black;
+  border-radius: 2%;
+  box-shadow: 0px 0px 20px #262E30;
 }
 
 .recent {
-  margin: 0;
-  background-color: red;
+  margin: 2rem;
+  background-color: #062f4f;
   float: left;
   width: 30%;
   padding: 1rem;
-  height: 100%;
+  height: 90%;
+  border-radius: 2%;
+  box-shadow: 0px 0px 20px #262E30;
 }
 
 .title {
   margin: auto;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
+  font-family: sans-serif;
+  color: #DEDEDE;
 }
 
 .articlewindow {
@@ -335,6 +349,21 @@ h3{
 
 .active, .dot:hover {
   background-color: #717171;
+}
+
+.footer {
+    background-color: #062f4f;
+    color: #DEDEDE;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    width: 100%;
+    position: fixed;
+}
+
+h4 {
+  margin: 0;
 }
 
 /* ==========================================================================
