--- a/main.css
+++ b/main.css
@@ -108,9 +108,9 @@ body {
 
 .content {
   background-color: #DEDEDE;
-  height: 85.5vh;
+  position: relative;
+  height: 85vh;
 }
-/*#3C9794*/
 
 .banner{
     background-color: #062f4f;
@@ -118,7 +118,7 @@ body {
     margin: auto;
     font-size: 30px;
     font-style: bold;
-    font-family: "lobster";
+    font-family: sans-serif;
     color: #DEDEDE;
 
 }
@@ -135,23 +135,19 @@ body {
     color: #DEDEDE;
     background-color: #062f4f;
     text-align: center;
-    padding: 15px 22px;
     text-decoration: none;
+    padding: 15px 22px;
     font-size: 17px;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #D9D9D9;
-}
-
-/* Style the "active" element to highlight the current page */
-.topnav a.active {
-    background-color: #062f4f;
+  color: white;
+  font-weight: bold;
 }
 
 .topnav a.active:hover {
-  background-color: #D9D9D9;
+  color: white;
 }
 
 /* Style the search box inside the navigation bar */
@@ -166,6 +162,8 @@ body {
 .dropdown {
   float: left;
   overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 /* Dropdown button */
@@ -174,32 +172,24 @@ body {
   border: none;
   outline: none;
   color: #DEDEDE;
-  padding: 0.875rem 1rem;
   background-color: inherit;
   font: inherit; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
 }
 
 .dropdown .dropbtn:hover {
-  background-color: #D9D9D9;
+  color: white;
   }
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: white;
+  background-color: #DEDEDE;
   width: 100%;
   left: 0;
   box-shadow: 0rem 0.5rem 1rem 0rem rgba(0,0,0,0.2);
   z-index: 1;
-}
-
-/* Mega Menu header, if needed */
-.dropdown-content .header {
-  background: red;
-  padding: 0.5rem;
-  color: white;
 }
 
 /* Show the dropdown menu on hover */
@@ -212,31 +202,18 @@ body {
   float: left;
   width: 20%;
   padding: 0.625rem;
-  background-color: white;
-  height: 10.75rem;
+  height: 8.5rem;
 }
 
 /* Style links inside the columns */
 .column a {
   float: none;
-  color: black;
-  background-color: #062f4f;
+  border-radius: 10px;
+  margin: 10px;
   padding: 1rem;
   text-decoration: none;
   display: block;
-  text-align: left;
-}
-
-/* Add a background color on hover */
-.column a:hover {
-  background-color: ;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+  text-align: center;
 }
 
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
@@ -249,26 +226,29 @@ body {
         margin: 0;
         padding: 14px;
     }
+
     .topnav input[type=text] {
         border: 1px solid #ccc;
     }
 }
 
 .featured {
+  display: inline-block;
+  position: relative;
   width: 60%;
   background-color: #062f4f;
   height: 90%;
   padding: 1rem;
   margin: 2rem;
-  float: left;
   border-radius: 2%;
   box-shadow: 0px 0px 20px #262E30;
 }
 
 .recent {
+  display: inline-block;
+  position: absolute;
   margin: 2rem;
   background-color: #062f4f;
-  float: left;
   width: 30%;
   padding: 1rem;
   height: 90%;
