--- a/main.css
+++ b/main.css
@@ -102,6 +102,28 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.boomboom{
+    position: relative;
+   }
+
+   .bottomcenterone{
+      position: absolute;
+    left: 0;
+    top: 90%;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+   }
+
+.categoriestable{
+  height: 40%;
+  left: 10%;
+  margin: 20px auto;
+  overflow-y: scroll;
+  position: static;
+  width: 80%;
+}
+
 body {
   margin: 0;
 }
