--- a/main.css
+++ b/main.css
@@ -102,28 +102,6 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-.boomboom{
-    position: relative;
-   }
-
-   .bottomcenterone{
-      position: absolute;
-    left: 0;
-    top: 90%;
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
-   }
-
-.categoriestable{
-  height: 40%;
-  left: 10%;
-  margin: 20px auto;
-  overflow-y: scroll;
-  position: static;
-  width: 80%;
-}
-
 body {
   margin: 0;
 }
@@ -170,6 +148,14 @@ body {
 
 .topnav a.active:hover {
   color: white;
+}
+
+.topnav .acctlinks {
+  background-color: #062f4f;
+  padding-left: 0;
+  padding-top: 1.3rem;
+  font-size: 10px;
+  float: right;
 }
 
 /* Style the search box inside the navigation bar */
@@ -361,7 +347,7 @@ body {
     padding: 0;
     font-family: sans-serif;
     width: 100%;
-    position: fixed;
+    position: absolute;
 }
 
 h4 {
