--- a/main.css
+++ b/main.css
@@ -109,6 +109,7 @@ body {
 .content {
   background-color: #DEDEDE;
   position: relative;
+  width: 100%;
   height: 85vh;
 }
 
@@ -270,6 +271,14 @@ body {
   height: 90%;
   border-radius: 2%;
   box-shadow: 0px 0px 20px #262E30;
+}
+
+.archivelist {
+  display: grid;
+  border: 1px red solid;
+  margin: auto;
+  width: 80%;
+  height: 95%;
 }
 
 .title {
